force-app/main/default/objects/Priority_Batch_Settings__c/Priority_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Priority Batch Settings</label>
</CustomObject>