force-app/main/default/objects/Priority_Batch_Settings__c/fields/Batch_End__c.field-meta.xml
<CustomField>
    <fullName>Batch_End__c</fullName>
    <description>Do not manually edit this field.  The batch job will automatically populate it when running.</description>
    <inlineHelpText>Do not manually edit this field.  The batch job will automatically populate it when running.</inlineHelpText>
    <label>Batch End</label>
    <type>DateTime</type>
</CustomField>