force-app/main/default/objects/Priority_Batch_Settings__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>today()+90</defaultValue>
    <description>The end date of the period for which you want to run prioritization.  E.g., the end of your next fiscal quarter.</description>
    <inlineHelpText>The end date of the period for which you want to run prioritization.  E.g., the end of your next fiscal quarter.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>