force-app/main/default/objects/Priority_Batch_Settings__c/fields/FULL_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>FULL_Record_Type_Name__c</fullName>
    <label>FULL Record Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>