force-app/main/default/objects/Priority_Batch_Settings__c/fields/Sales_Rep_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Type__c</fullName>
    <defaultValue>&quot;Sales-BDE&quot;</defaultValue>
    <inlineHelpText>The group of reps for whom you want to calculate priority records for.  Eg. &quot;Territory - West&quot; or &quot;Territory - East&quot;.  This should match the value of the Sales Segment field on the user record.</inlineHelpText>
    <label>Sales Segment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>