force-app/main/default/objects/Priority_Batch_Settings__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>The start date of the period for which you want to run prioritization.  E.g. the start of your next fiscal quarter.</description>
    <inlineHelpText>The start date of the period for which you want to run prioritization.  E.g. the start of your next fiscal quarter.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>